search boxes support regex

--- a/static/style.css
+++ b/static/style.css
@@ -83,6 +83,9 @@ h1.tabletitle {
 a:hover {
     text-decoration: underline;
 }
+.dataTables_filter {
+    display: none;
+}
 /* form */
 form {
     text-align: center;
