--- a/templates/list_filters.html
+++ b/templates/list_filters.html
@@ -3,7 +3,7 @@
 {% block head %}
 {{ super() }}
 <script type="text/javascript" src="{{ url_for('static', filename='jquery-1.9.1.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='jquery-ui-1.8.17.custom.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='jquery-ui.js') }}"></script>
 <script type="text/javascript" id="js">
 $(document).ready(function() {
     $(function() {
