--- a/static/style.css
+++ b/static/style.css
@@ -115,8 +115,26 @@ fieldset legend {
     padding-left: 0.5em;
     padding-right: 0.5em;
 }
+/* filters */
 .filter div {
     display: inline;
+}
+/* controls */
+.controls ul li {
+    border: 1px solid;
+    display: inline-block;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #D0E0F0;
+}
+/* border stuff */
+.rightalign_border {
+    text-align: right;
+    border: 1px solid;
+    display: inline-block;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #D0E0F0;
 }
 /* errors */
 .error {
@@ -125,6 +143,7 @@ fieldset legend {
 }
 /*divs*/
 #msgBox {
+    display: none;
     text-align: center;
     position: relative;
 }
