--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
-{% block title %}Settings for session['username']{% endblock %}
+{% block title %}Settings for {{ session['username'] }}{% endblock %}
 {% block content %}
-<ul>
-<li><a href="{{ url_for('list_filters') }}">Edit Filters</a></li>
-<li><a href="{{ url_for('edit_users') }}">Edit Users</a></li>
-<li><a href="{{ url_for('edit_user', username=session['username']) }}">My Account</a></li>
-</ul>
+<div class="controls centered">
+    <ul>
+        <li><a href="{{ url_for('list_filters') }}">Edit Filters</a></li>
+        <li><a href="{{ url_for('edit_users') }}">Edit Users</a></li>
+        <li><a href="{{ url_for('edit_user', username=session['username']) }}">My Account</a></li>
+    </ul>
+</div>
 <br /><br />
 Tips:
 <br />
